Fixed styling for Contact page background color: was not fully covering on different resolution in  FireFox or Safari browsers.

--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -79,6 +79,11 @@
 
 /* ///////// */
 
+#contact {
+    background-color: #188ef4;
+    height: 92vh;
+}
+
 #username {
     background: url("../../img/username-icon.png") no-repeat 10px 8px;
     background-size: 18px 18px;
